Bug 334819 - System tray does not close when the calendar opens
Summary: System tray does not close when the calendar opens
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
: 334809 334841 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-15 14:34 UTC by Sven Langkamp
Modified: 2014-05-16 00:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (152.54 KB, image/png)
2014-05-15 14:35 UTC, Sven Langkamp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Langkamp 2014-05-15 14:34:40 UTC
Expanded panels in the system tray stay open when switching to another one. That means that the panels overlap eachother. In earlier version of Plasma they closed when switching to the next.

Neon5 beta

Reproducible: Always

Steps to Reproduce:
1. click on Device Notifier icon in system tray
2. click on clock in system tray
Actual Results:  
Calendar and devices widgets stay open.

Expected Results:  
The first widget should close.
Comment 1 Sven Langkamp 2014-05-15 14:35:39 UTC
Created attachment 86648 [details]
Screenshot
Comment 2 Marco Martin 2014-05-15 15:27:27 UTC
Changed the description to better describe what's happening
Comment 3 Marco Martin 2014-05-15 15:44:20 UTC
Git commit 09453cfe896b903300f5f627b493c2dfa9326993 by Marco Martin.
Committed on 15/05/2014 at 15:42.
Pushed by mart into branch 'master'.

parentHasFocus false if Qt::WindowDoesNotAcceptFocus

M  +2    -1    src/plasmaquick/dialog.cpp

http://commits.kde.org/plasma-framework/09453cfe896b903300f5f627b493c2dfa9326993
Comment 4 Louis Moureaux 2014-05-15 21:40:49 UTC
*** Bug 334841 has been marked as a duplicate of this bug. ***
Comment 5 Sebastian Kügler 2014-05-16 00:58:27 UTC
*** Bug 334809 has been marked as a duplicate of this bug. ***