parentHasFocus false if Qt::WindowDoesNotAcceptFocus

BUG:334819